k8s/prod/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  template:
    metadata:
      labels:
        io.kompose.service: api-gateway
    spec:
      serviceAccountName: api-gateway
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: acr-secret
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
              value: http://service-discovery:8761/eureka/
            - name: EUREKA_INSTANCE_HOSTNAME
              value: api-gateway
          image: microservicesacr5fa48984.azurecr.io/api-gateway:prod
          imagePullPolicy: Always
          name: api-gateway
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "512Mi"
            limits:
              memory: "512Mi"
              cpu: "300m"
              ephemeral-storage: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 150
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
  namespace: prod
spec:
  type: ClusterIP
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: api-gateway
