k8s/prod/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
    io.kompose.service: frontend
  name: frontend
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      io.kompose.service: frontend
  template:
    metadata:
      labels:
        app: frontend
        io.kompose.service: frontend
    spec:
      serviceAccountName: frontend
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: acr-secret
      containers:
        - env:
            - name: VITE_API_URL
              value: "https://api.santiesleo.dev"
          image: microservicesacr5fa48984.azurecr.io/frontend:prod
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
              ephemeral-storage: "128Mi"
            limits:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
    io.kompose.service: frontend
  name: frontend
  namespace: prod
spec:
  type: ClusterIP
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: frontend
    io.kompose.service: frontend
