k8s/prod/proxy-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: proxy-client
  name: proxy-client
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy-client
  template:
    metadata:
      labels:
        io.kompose.service: proxy-client
    spec:
      serviceAccountName: proxy-client
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: acr-secret
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
              value: http://service-discovery:8761/eureka/
            - name: EUREKA_INSTANCE_HOSTNAME
              value: proxy-client
          name: proxy-client
          image: microservicesacr5fa48984.azurecr.io/proxy-client:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 8900
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
              ephemeral-storage: "768Mi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: proxy-client
  name: proxy-client
  namespace: prod
spec:
  ports:
    - name: "8900"
      port: 8900
      targetPort: 8900
  selector:
    io.kompose.service: proxy-client
