k8s/prod/service-discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: service-discovery
  name: service-discovery
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: service-discovery
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: service-discovery
    spec:
      serviceAccountName: service-discovery
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: acr-secret
      containers:
        - env:
            - name: EUREKA_INSTANCE
              value: service-discovery
            - name: EUREKA_INSTANCE_HOSTNAME
              value: service-discovery
          image: microservicesacr5fa48984.azurecr.io/service-discovery:prod
          imagePullPolicy: Always
          name: service-discovery
          ports:
            - containerPort: 8761
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
              ephemeral-storage: "512Mi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 150
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: service-discovery
  name: service-discovery
  namespace: prod
spec:
  type: ClusterIP
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    io.kompose.service: service-discovery
