k8s/prod/shipping-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: shipping-service
  name: shipping-service
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shipping-service
  template:
    metadata:
      labels:
        io.kompose.service: shipping-service
    spec:
      serviceAccountName: shipping-service
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: acr-secret
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
              value: http://service-discovery:8761/eureka/
            - name: EUREKA_INSTANCE_HOSTNAME
              value: shipping-service
            - name: SPRING_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key: mysql-root-password
          image: microservicesacr5fa48984.azurecr.io/shipping-service:prod
          imagePullPolicy: Always
          name: shipping-service
          ports:
            - containerPort: 8600
              protocol: TCP
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
              ephemeral-storage: "512Mi"
            limits:
              memory: "1Gi"
              cpu: "300m"
              ephemeral-storage: "1Gi"
          readinessProbe:
            httpGet:
              path: /shipping-service/actuator/health
              port: 8600
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /shipping-service/actuator/health
              port: 8600
            initialDelaySeconds: 150
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: shipping-service
  name: shipping-service
  namespace: prod
spec:
  ports:
    - name: "8600"
      port: 8600
      targetPort: 8600
  selector:
    io.kompose.service: shipping-service
