k8s/prod/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: user-service
  name: user-service
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service
  template:
    metadata:
      labels:
        io.kompose.service: user-service
    spec:
      serviceAccountName: user-service
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: acr-secret
      containers:
        - env:
            # H2 en memoria para prod
            - name: SPRING_DATASOURCE_URL
              value: jdbc:h2:mem:user_service_db;DB_CLOSE_DELAY=-1;MODE=MYSQL
            - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
              value: org.h2.Driver
            - name: SPRING_DATASOURCE_USERNAME
              value: sa
            - name: SPRING_DATASOURCE_PASSWORD
              value: ""
            - name: SPRING_JPA_DATABASE_PLATFORM
              value: org.hibernate.dialect.H2Dialect
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: validate
            - name: SPRING_FLYWAY_ENABLED
              value: "true"
            - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
              value: http://service-discovery:8761/eureka/
            - name: EUREKA_INSTANCE_HOSTNAME
              value: user-service
          image: microservicesacr5fa48984.azurecr.io/user-service:prod
          imagePullPolicy: Always
          name: user-service
          ports:
            - containerPort: 8700
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "512Mi"
            limits:
              memory: "512Mi"
              cpu: "300m"
              ephemeral-storage: "1Gi"
          readinessProbe:
            httpGet:
              path: /user-service/actuator/health
              port: 8700
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /user-service/actuator/health
              port: 8700
            initialDelaySeconds: 150
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: user-service
  name: user-service
  namespace: prod
spec:
  ports:
    - name: "8700"
      port: 8700
      targetPort: 8700
  selector:
    io.kompose.service: user-service
